[package]
name = "tailwind_fuse"
version.workspace = true
edition.workspace = true
authors = ["Nico Burniske", "Gaucho Labs"]
description = "Tailwind Merge and Variants"
keywords = ["tailwind", "css", "variant", "rust", "leptos"]
license.workspace = true
readme = "../README.md"
repository.workspace = true

[dependencies]
nom = { version = "7" }
tailwind_fuse_macro = { path = "../variant-macro", version = "0.3.0", optional = true }

[dev-dependencies]
divan = "0.1.14"
fastrand = "2"

[[bench]]
name = "merge"
harness = false

[features]
variant = ["dep:tailwind_fuse_macro"]
debug = []

[package.metadata.docs.rs]
all-features = true
