[package]
name = "tailwind_fuse_macro"
version.workspace = true
edition.workspace = true
authors = ["Nico Burniske", "Gaucho Labs"]
description = "Macros for tailwind-fuse"
keywords = ["tailwind", "variants", "leptos"]
license.workspace = true
readme = "../README.md"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

