[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
copy_dir = "0.1"

leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
log = "0.4"

tailwind_fuse = { path = "../../fuse", features = ["variant"] }
leptos_theme = { git = "https://github.com/kirinse/leptos-theme" }
